flutter/macos/Frameworks/EdgeVedaCore.xcframework/macos-arm64_x86_64/Headers/edge_veda.h


EV_API const char* ev_version(void);
typedef enum {
    EV_SUCCESS = 0,                    
    EV_ERROR_INVALID_PARAM = -1,       
    EV_ERROR_OUT_OF_MEMORY = -2,       
    EV_ERROR_MODEL_LOAD_FAILED = -3,   
    EV_ERROR_BACKEND_INIT_FAILED = -4, 
    EV_ERROR_INFERENCE_FAILED = -5,    
    EV_ERROR_CONTEXT_INVALID = -6,     
    EV_ERROR_STREAM_ENDED = -7,        
    EV_ERROR_NOT_IMPLEMENTED = -8,     
    EV_ERROR_MEMORY_LIMIT_EXCEEDED = -9, 
    EV_ERROR_UNSUPPORTED_BACKEND = -10, 
    EV_ERROR_UNKNOWN = -999            
} ev_error_t;
EV_API const char* ev_error_string(ev_error_t error);
typedef enum {
    EV_BACKEND_AUTO = 0,    
    EV_BACKEND_METAL = 1,   
    EV_BACKEND_VULKAN = 2,  
    EV_BACKEND_CPU = 3      
} ev_backend_t;
EV_API ev_backend_t ev_detect_backend(void);
EV_API bool ev_is_backend_available(ev_backend_t backend);
EV_API const char* ev_backend_name(ev_backend_t backend);
typedef struct {
    const char* model_path;
    ev_backend_t backend;
    int num_threads;
    int context_size;
    int batch_size;
    size_t memory_limit_bytes;
    bool auto_unload_on_memory_pressure;
    int gpu_layers;
    bool use_mmap;
    bool use_mlock;
    int seed;
    int flash_attn;
    int kv_cache_type_k;
    int kv_cache_type_v;
    void* reserved;
} ev_config;
EV_API void ev_config_default(ev_config* config);
typedef struct ev_context_impl* ev_context;
EV_API ev_context ev_init(const ev_config* config, ev_error_t* error);
EV_API void ev_free(ev_context ctx);
EV_API bool ev_is_valid(ev_context ctx);
typedef struct {
    int max_tokens;
    float temperature;
    float top_p;
    int top_k;
    float repeat_penalty;
    float frequency_penalty;
    float presence_penalty;
    const char** stop_sequences;
    int num_stop_sequences;
    const char* grammar_str;
    const char* grammar_root;
    float confidence_threshold;
    void* reserved;
} ev_generation_params;
EV_API void ev_generation_params_default(ev_generation_params* params);
EV_API ev_error_t ev_generate(
    ev_context ctx,
    const char* prompt,
    const ev_generation_params* params,
    char** output
);
EV_API void ev_free_string(char* str);
typedef struct ev_stream_impl* ev_stream;
EV_API ev_stream ev_generate_stream(
    ev_context ctx,
    const char* prompt,
    const ev_generation_params* params,
    ev_error_t* error
);
EV_API char* ev_stream_next(ev_stream stream, ev_error_t* error);
EV_API bool ev_stream_has_next(ev_stream stream);
EV_API void ev_stream_cancel(ev_stream stream);
EV_API void ev_stream_free(ev_stream stream);
typedef struct {
    size_t current_bytes;
    size_t peak_bytes;
    size_t limit_bytes;
    size_t model_bytes;
    size_t context_bytes;
    size_t reserved[8];
} ev_memory_stats;
EV_API ev_error_t ev_get_memory_usage(ev_context ctx, ev_memory_stats* stats);
EV_API ev_error_t ev_set_memory_limit(ev_context ctx, size_t limit_bytes);
typedef void (*ev_memory_pressure_callback)(
    void* user_data,
    size_t current_bytes,
    size_t limit_bytes
);
EV_API ev_error_t ev_set_memory_pressure_callback(
    ev_context ctx,
    ev_memory_pressure_callback callback,
    void* user_data
);
EV_API ev_error_t ev_memory_cleanup(ev_context ctx);
EV_API void ev_set_verbose(bool enable);
EV_API const char* ev_get_last_error(ev_context ctx);
EV_API ev_error_t ev_reset(ev_context ctx);
typedef struct ev_vision_context_impl* ev_vision_context;
typedef struct {
    const char* model_path;
    const char* mmproj_path;
    int num_threads;
    int context_size;
    int batch_size;
    size_t memory_limit_bytes;
    int gpu_layers;
    bool use_mmap;
    void* reserved;
} ev_vision_config;
EV_API void ev_vision_config_default(ev_vision_config* config);
EV_API ev_vision_context ev_vision_init(
    const ev_vision_config* config,
    ev_error_t* error
);
EV_API ev_error_t ev_vision_describe(
    ev_vision_context ctx,
    const unsigned char* image_bytes,
    int width,
    int height,
    const char* prompt,
    const ev_generation_params* params,
    char** output
);
EV_API void ev_vision_free(ev_vision_context ctx);
EV_API bool ev_vision_is_valid(ev_vision_context ctx);
typedef struct {
    double model_load_ms;
    double image_encode_ms;
    double prompt_eval_ms;
    double decode_ms;
    int32_t prompt_tokens;
    int32_t generated_tokens;
} ev_timings_data;
EV_API ev_error_t ev_vision_get_last_timings(
    ev_vision_context ctx,
    ev_timings_data* timings
);
typedef struct ev_speculative_params {
    int32_t n_max;       
    int32_t n_min;       
    float   p_min;       
    float   p_split;     
    int32_t n_ctx;       
    int32_t n_gpu_layers;
    int32_t cache_type_k;
    int32_t cache_type_v;
} ev_speculative_params;
EV_API void ev_speculative_params_default(ev_speculative_params* params);
EV_API ev_error_t ev_speculative_attach(
    ev_context ctx,
    const char* draft_path,
    const ev_speculative_params* params
);
EV_API bool ev_speculative_is_attached(ev_context ctx);
EV_API ev_error_t ev_speculative_detach(ev_context ctx);
typedef struct ev_speculative_stats {
    int64_t n_drafted;       
    int64_t n_accepted;      
    int64_t n_rejected;      
    double  acceptance_rate; 
} ev_speculative_stats;
EV_API ev_error_t ev_speculative_get_stats(
    ev_context ctx,
    ev_speculative_stats* stats
);