flutter/lib/src/ffi/bindings.dart


  /// Free string allocated by Edge Veda
  late final EvFreeStringDart evFreeString;

  // Speculative decoding (mobile-news#586 gap #10). Nullable so the
  // host can detect "library predates speculative API" — older
  // edge_veda binaries don't export these symbols.
  EvSpeculativeParamsDefaultDart? evSpeculativeParamsDefault;
  EvSpeculativeAttachDart? evSpeculativeAttach;
  EvSpeculativeIsAttachedDart? evSpeculativeIsAttached;
  EvSpeculativeDetachDart? evSpeculativeDetach;
  EvSpeculativeGetStatsDart? evSpeculativeGetStats;

  // ---------------------------------------------------------------------------
  // Memory Management Functions
  // ---------------------------------------------------------------------------

  /// Get current memory usage statistics
  late final EvGetMemoryUsageDart evGetMemoryUsage;

  /// Set memory limit for context
  late final EvSetMemoryLimitDart evSetMemoryLimit;

  /// Register callback for memory pressure events
  late final EvSetMemoryPressureCallbackDart evSetMemoryPressureCallback;

  /// Manually trigger garbage collection and memory cleanup
  late final EvMemoryCleanupDart evMemoryCleanup;

  // ---------------------------------------------------------------------------
  // Utility Functions
  // ---------------------------------------------------------------------------

  /// Enable or disable verbose logging
  late final EvSetVerboseDart evSetVerbose;

  /// Get last error message for context
  late final EvGetLastErrorDart evGetLastError;

  /// Reset context state (clear conversation history)
  late final EvResetDart evReset;

  // ---------------------------------------------------------------------------
  // Streaming Generation Functions
  // ---------------------------------------------------------------------------

  /// Start streaming generation for given prompt
  late final EvGenerateStreamDart evGenerateStream;

  /// Get next token from streaming generation
  late final EvStreamNextDart evStreamNext;

  /// Check if stream has more tokens available
  late final EvStreamHasNextDart evStreamHasNext;

  /// Cancel ongoing streaming generation
  late final EvStreamCancelDart evStreamCancel;

  /// Free stream handle and release resources
  late final EvStreamFreeDart evStreamFree;

  // ---------------------------------------------------------------------------
  // Vision Functions
  // ---------------------------------------------------------------------------

  /// Get default vision configuration with recommended settings
  late final EvVisionConfigDefaultDart evVisionConfigDefault;

  /// Initialize vision context with VLM model and mmproj
  late final EvVisionInitDart evVisionInit;

  /// Describe an image using the vision model
  late final EvVisionDescribeDart evVisionDescribe;

  /// Free vision context and release all resources
  late final EvVisionFreeDart evVisionFree;

  /// Check if vision context is valid and ready for inference
  late final EvVisionIsValidDart evVisionIsValid;

  /// Get last inference timing data from vision context
  late final EvVisionGetLastTimingsDart evVisionGetLastTimings;

  // ---------------------------------------------------------------------------
  // Whisper Functions
  // ---------------------------------------------------------------------------

  /// Get default whisper configuration with recommended settings
  late final EvWhisperConfigDefaultDart evWhisperConfigDefault;

  /// Initialize whisper context with model
  late final EvWhisperInitDart evWhisperInit;

  /// Transcribe PCM audio samples to text
  late final EvWhisperTranscribeDart evWhisperTranscribe;

  /// Free whisper transcription result
  late final EvWhisperFreeResultDart evWhisperFreeResult;

  /// Free whisper context and release all resources
  late final EvWhisperFreeDart evWhisperFree;

  /// Check if whisper context is valid and ready for transcription
  late final EvWhisperIsValidDart evWhisperIsValid;

  // ---------------------------------------------------------------------------
  // Embeddings Functions
  // ---------------------------------------------------------------------------

  /// Compute text embeddings
  late final EvEmbedDart evEmbed;

  /// Free embedding result
  late final EvFreeEmbeddingsDart evFreeEmbeddings;

  // ---------------------------------------------------------------------------
  // Image Generation Functions
  // ---------------------------------------------------------------------------

  /// Get default image generation configuration
  late final EvImageConfigDefaultDart evImageConfigDefault;

  /// Get default image generation parameters
  late final EvImageGenParamsDefaultDart evImageGenParamsDefault;

  /// Initialize image generation context with SD model
  late final EvImageInitDart evImageInit;

  /// Free image generation context and release all resources
  late final EvImageFreeDart evImageFree;

  /// Check if image generation context is valid and ready
  late final EvImageIsValidDart evImageIsValid;

  /// Set progress callback for image generation
  late final EvImageSetProgressCallbackDart evImageSetProgressCallback;

  /// Generate an image from a text prompt
  late final EvImageGenerateDart evImageGenerate;

  /// Free image generation result
  late final EvImageFreeResultDart evImageFreeResult;

  // ---------------------------------------------------------------------------
  // Streaming Token Info Functions
  // ---------------------------------------------------------------------------

  /// Get extended token information (confidence) from stream
  late final EvStreamGetTokenInfoDart evStreamGetTokenInfo;

  // ---------------------------------------------------------------------------
  // Binding Initialization
  // ---------------------------------------------------------------------------

  void _initBindings() {
    // Version / Error
    evVersion = _dylib.lookupFunction<EvVersionNative, EvVersionDart>(
      'ev_version',
    );
    evErrorString = _dylib
        .lookupFunction<EvErrorStringNative, EvErrorStringDart>(
          'ev_error_string',
        );

    // Backend detection
    evDetectBackend = _dylib
        .lookupFunction<EvDetectBackendNative, EvDetectBackendDart>(
          'ev_detect_backend',
        );
    evIsBackendAvailable = _dylib
        .lookupFunction<EvIsBackendAvailableNative, EvIsBackendAvailableDart>(
          'ev_is_backend_available',
        );
    evBackendName = _dylib
        .lookupFunction<EvBackendNameNative, EvBackendNameDart>(
          'ev_backend_name',
        );

    // Configuration
    evConfigDefault = _dylib
        .lookupFunction<EvConfigDefaultNative, EvConfigDefaultDart>(
          'ev_config_default',
        );

    // Context management
    evInit = _dylib.lookupFunction<EvInitNative, EvInitDart>('ev_init');
    evFree = _dylib.lookupFunction<EvFreeNative, EvFreeDart>('ev_free');
    evIsValid = _dylib.lookupFunction<EvIsValidNative, EvIsValidDart>(
      'ev_is_valid',
    );

    // Generation parameters
    evGenerationParamsDefault = _dylib.lookupFunction<
      EvGenerationParamsDefaultNative,
      EvGenerationParamsDefaultDart
    >('ev_generation_params_default');

    // Single-shot generation
    evGenerate = _dylib.lookupFunction<EvGenerateNative, EvGenerateDart>(
      'ev_generate',
    );
    // Speculative decoding (mobile-news#586 gap #10).
    // Bindings are bound only on libraries that export the symbols
    // (anything compiled against llama.cpp >=2024 with
    // LLAMA_BUILD_COMMON ON — that's our entire current matrix).
    // Any older library raises ArgumentError at first lookup; we
    // wrap each in try/catch so callers can detect availability via
    // `evSpeculativeAttach == null`.
    try {
      evSpeculativeParamsDefault = _dylib.lookupFunction<
          EvSpeculativeParamsDefaultNative,
          EvSpeculativeParamsDefaultDart>('ev_speculative_params_default');
      evSpeculativeAttach = _dylib.lookupFunction<
          EvSpeculativeAttachNative, EvSpeculativeAttachDart>(
          'ev_speculative_attach');
      evSpeculativeIsAttached = _dylib.lookupFunction<
          EvSpeculativeIsAttachedNative, EvSpeculativeIsAttachedDart>(
          'ev_speculative_is_attached');
      evSpeculativeDetach = _dylib.lookupFunction<
          EvSpeculativeDetachNative, EvSpeculativeDetachDart>(
          'ev_speculative_detach');
      evSpeculativeGetStats = _dylib.lookupFunction<
          EvSpeculativeGetStatsNative, EvSpeculativeGetStatsDart>(
          'ev_speculative_get_stats');
    } on ArgumentError {
      // Pre-mobile-news#586 build of edge_veda.dll / libedge_veda.so —
      // speculative API not present. Leave fields null.
      evSpeculativeParamsDefault = null;
      evSpeculativeAttach = null;
      evSpeculativeIsAttached = null;
      evSpeculativeDetach = null;
      evSpeculativeGetStats = null;
    }

    evFreeString = _dylib.lookupFunction<EvFreeStringNative, EvFreeStringDart>(
      'ev_free_string',
    );

    // Memory management
    evGetMemoryUsage = _dylib
        .lookupFunction<EvGetMemoryUsageNative, EvGetMemoryUsageDart>(
          'ev_get_memory_usage',
        );
    evSetMemoryLimit = _dylib
        .lookupFunction<EvSetMemoryLimitNative, EvSetMemoryLimitDart>(
          'ev_set_memory_limit',
        );
    evSetMemoryPressureCallback = _dylib.lookupFunction<
      EvSetMemoryPressureCallbackNative,
      EvSetMemoryPressureCallbackDart
    >('ev_set_memory_pressure_callback');
    evMemoryCleanup = _dylib
        .lookupFunction<EvMemoryCleanupNative, EvMemoryCleanupDart>(
          'ev_memory_cleanup',
        );

    // Utility functions
    evSetVerbose = _dylib.lookupFunction<EvSetVerboseNative, EvSetVerboseDart>(
      'ev_set_verbose',
    );
    evGetLastError = _dylib
        .lookupFunction<EvGetLastErrorNative, EvGetLastErrorDart>(
          'ev_get_last_error',
        );
    evReset = _dylib.lookupFunction<EvResetNative, EvResetDart>('ev_reset');

    // Streaming generation
    evGenerateStream = _dylib
        .lookupFunction<EvGenerateStreamNative, EvGenerateStreamDart>(
          'ev_generate_stream',
        );
    evStreamNext = _dylib.lookupFunction<EvStreamNextNative, EvStreamNextDart>(
      'ev_stream_next',
    );
    evStreamHasNext = _dylib
        .lookupFunction<EvStreamHasNextNative, EvStreamHasNextDart>(
          'ev_stream_has_next',
        );
    evStreamCancel = _dylib
        .lookupFunction<EvStreamCancelNative, EvStreamCancelDart>(
          'ev_stream_cancel',
        );
    evStreamFree = _dylib.lookupFunction<EvStreamFreeNative, EvStreamFreeDart>(
      'ev_stream_free',
    );

    // Vision functions
    evVisionConfigDefault = _dylib
        .lookupFunction<EvVisionConfigDefaultNative, EvVisionConfigDefaultDart>(
          'ev_vision_config_default',
        );
    evVisionInit = _dylib.lookupFunction<EvVisionInitNative, EvVisionInitDart>(
      'ev_vision_init',
    );
    evVisionDescribe = _dylib
        .lookupFunction<EvVisionDescribeNative, EvVisionDescribeDart>(
          'ev_vision_describe',
        );
    evVisionFree = _dylib.lookupFunction<EvVisionFreeNative, EvVisionFreeDart>(
      'ev_vision_free',
    );
    evVisionIsValid = _dylib
        .lookupFunction<EvVisionIsValidNative, EvVisionIsValidDart>(
          'ev_vision_is_valid',
        );
    evVisionGetLastTimings = _dylib.lookupFunction<
      EvVisionGetLastTimingsNative,
      EvVisionGetLastTimingsDart
    >('ev_vision_get_last_timings');
